Tidy up distribution

--- a/src/main/resources/options.html
+++ b/src/main/resources/options.html
@@ -7,14 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <title>Crossword Scraper - Options</title>
-    <!--
-    <style type="text/css">
-      body {
-        width: 325px;
-      }
-    </style>
-    -->
-    <script src="browser-polyfill.min.js"></script>
+    <script src="js/browser-polyfill.min.js"></script>
 </head>
 
 <body class="py-2">
@@ -27,8 +20,8 @@
     </div>
     <div class="d-none" id="options-container"></div>
 </div>
-<script src="jquery.slim.min.js"></script>
+<script src="js/jquery.slim.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
-<script src="CrosswordScraper.js"></script>
+<script src="js/CrosswordScraper.js"></script>
 </body>
 </html>
