--- a/src/main/resources/popup.html
+++ b/src/main/resources/popup.html
@@ -13,7 +13,7 @@
       }
 
     </style>
-    <script src="browser-polyfill.min.js"></script>
+    <script src="js/browser-polyfill.min.js"></script>
 </head>
 
 <body class="py-2">
@@ -26,8 +26,8 @@
     </div>
     <div class="d-none" id="puzzle-container"></div>
 </div>
-<script src="jquery.slim.min.js"></script>
+<script src="js/jquery.slim.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
-<script src="CrosswordScraper.js"></script>
+<script src="js/CrosswordScraper.js"></script>
 </body>
 </html>
