--- a/src/main/resources/options.html
+++ b/src/main/resources/options.html
@@ -22,6 +22,7 @@
 </div>
 <script src="js/jquery.slim.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/browser-scripting-workaround.js"></script>
 <script src="js/CrosswordScraper.js"></script>
 </body>
 </html>
