Fix issue reporting link on Amuse Labs error page.

--- a/src/main/resources/amuse-labs.html
+++ b/src/main/resources/amuse-labs.html
@@ -15,9 +15,9 @@
     <hr/>
     <p>
         If you are seeing this page, you've encountered a failure scraping an Amuse Labs puzzle. This may be a bug
-        specific to this puzzle (in which case, please <a href="https://github.com/jpd236/kotwords/issues">report
-        it</a>), but if it is happening for multiple puzzles, this page may provide more context as to
-        a likely cause.
+        specific to this puzzle (in which case, please
+        <a href="https://github.com/jpd236/CrosswordScraper/issues">report it</a>), but if it is happening for multiple
+        puzzles, this page may provide more context as to a likely cause.
     </p>
     <p>
         Recently, Amuse Labs has begun introducing obfuscation measures to try and prevent automatic extraction of their
