--- a/src/jsMain/resources/options.html
+++ b/src/jsMain/resources/options.html
@@ -6,26 +6,20 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <title>Crossword Scraper</title>
-    <style type="text/css">
-      body {
-        width: 325px;
-      }
-    </style>
+    <title>Crossword Scraper - Options</title>
     <script src="js/browser-polyfill.min.js"></script>
 </head>
 
 <body class="py-2">
 <div id="root" class="container-fluid">
-    <h2>Crossword Scraper</h2>
+    <h2>Crossword Scraper - Options</h2>
     <hr/>
     <div id="loading-container">
         <div class="spinner-border align-middle" id="loading-spinner" role="status"></div>
-        <strong class="ml-1">Loading&hellip;</strong>
+        <strong class="ms-1">Loading&hellip;</strong>
     </div>
-    <div class="d-none" id="puzzle-container"></div>
+    <div class="d-none" id="options-container"></div>
 </div>
-<script src="js/jquery.slim.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/browser.js"></script>
 <script src="js/CrosswordScraper.js"></script>
